--- a/lang/EN.lang
+++ b/lang/EN.lang
@@ -229,7 +229,7 @@
     "create": "Create",
 
     "message": "Message",
-    "loginForm":"Login Form",
+    "loginForm":"Welcome To Luch",
     "login":"Login",
     "userName":"User Name",
     "pass":"Password",
@@ -354,7 +354,7 @@
     "reliability": "Real",
     "comment": "Comment",
     "continue": "Next",
-    "loginForm":"Login Form",
+    "loginForm":"Welcome To Luch",
     "login":"Login",
     "userName":"User Name",
     "pass":"Password",
@@ -401,7 +401,7 @@
     "aditionalInfo" : "Add Information",
     "reliability": "Real",
     "comment": "Comment",
-    "loginForm":"Login Form",
+    "loginForm":"Welcome To Luch",
     "login":"Login",
     "userName":"User Name",
     "pass":"Password",
@@ -447,7 +447,7 @@
     "toChart": "Charts",
     "toDiagnostic": "Diagnostic",
     "continueLabel": "Continue",
-    "loginForm":"Login Form",
+    "loginForm":"Welcome To Luch",
     "login":"Login",
     "userName":"User Name",
     "pass":"Password",
@@ -461,7 +461,7 @@
     "bort" : "A/C",
     "voyage" : "Flights",
     "engines" : "Номера двигателей",
-    "loginForm":"Login Form",
+    "loginForm":"Welcome To Luch",
     "login":"Login",
     "userName":"User Name",
     "pass":"Password",
@@ -490,7 +490,7 @@
     "wheelToZoomX": "Rotating the mouse wheel - zooming along the time axis",
     "shiftAndWheelToZoomY": "Rotating the mouse wheel while holding the SHIFT - scaling axis values",
     "time": "Time",
-    "loginForm":"Login Form",
+    "loginForm":"Welcome To Luch",
     "login":"Login",
     "userName":"User Name",
     "pass":"Password",
@@ -503,7 +503,7 @@
     "voyage":"Flight",
     "flightDate": "Flight Date",
     "time": "Time",
-    "loginForm":"Login Form",
+    "loginForm":"Welcome To Luch",
     "login":"Login",
     "userName":"User Name",
     "pass":"Password",
@@ -517,7 +517,7 @@
     "voyage":"Flight",
     "flightDate": "Flight Date",
     "time": "Time",
-    "loginForm":"Login Form",
+    "loginForm":"Welcome To Luch",
     "login":"Login",
     "userName":"User Name",
     "pass":"Password",
@@ -531,7 +531,7 @@
     "voyage":"Flight",
     "flightDate": "Flight Date",
     "time": "Time",
-    "loginForm":"Login Form",
+    "loginForm":"Welcome To Luch",
     "login":"Login",
     "userName":"User Name",
     "pass":"Password",
@@ -545,7 +545,7 @@
     "voyage":"Flight",
     "flightDate": "Flight Date",
     "time": "Time",
-    "loginForm":"Login Form",
+    "loginForm":"Welcome To Luch",
     "login":"Login",
     "userName":"User Name",
     "pass":"Password",
@@ -560,7 +560,7 @@
     "flightDate": "Flight Date",
     "tpl": "Templates",
     "time": "Time",
-    "loginForm":"Login Form",
+    "loginForm":"Welcome To Luch",
     "login":"Login",
     "userName":"User Name",
     "pass":"Password",
@@ -604,7 +604,7 @@
     "delChart": "Delete график",
     "message": "Message",
     "continueLabel": "Continue",
-    "loginForm":"Login Form",
+    "loginForm":"Welcome To Luch",
     "login":"Login",
     "userName":"User Name",
     "pass":"Password",
@@ -660,7 +660,7 @@
 },
 
 "userPage":{
-    "loginForm":"Login Form",
+    "loginForm":"Welcome To Luch",
     "rememberMe":"Remember",
     "login":"Login",
     "userCreation" : "Создание нового пользователя",
