--- a/lang/ES.lang
+++ b/lang/ES.lang
@@ -229,7 +229,7 @@
     "create": "Crear",
 
     "message": "Mensaje",
-    "loginForm":"Formulario de autorización",
+    "loginForm":"Bienvenido a Luch",
     "login":"Autorizar",
     "userName":"Login",
     "pass":"Contraseña",
@@ -354,7 +354,7 @@
     "reliability": "real",
     "comment": "Comentario",
     "continue": "Además",
-    "loginForm":"Formulario de autorización",
+    "loginForm":"Bienvenido a Luch",
     "login":"Autorizar",
     "userName":"Login",
     "pass":"Contraseña",
@@ -401,7 +401,7 @@
     "aditionalInfo" : "Extras. información",
     "reliability": "real",
     "comment": "Comentario",
-    "loginForm":"Formulario de autorización",
+    "loginForm":"Bienvenido a Luch",
     "login":"Autorizar",
     "userName":"Login",
     "pass":"Contraseña",
@@ -447,7 +447,7 @@
     "toChart": "La Calendario",
     "toDiagnostic": "El diagnóstico",
     "continueLabel": "Proceder",
-    "loginForm":"Formulario de autorización",
+    "loginForm":"Bienvenido a Luch",
     "login":"Autorizar",
     "userName":"Login",
     "pass":"Contraseña",
@@ -461,7 +461,7 @@
     "bort" : "Avión",
     "voyage" : "Vuelo",
     "engines" : "Номера двигателей",
-    "loginForm":"Formulario de autorización",
+    "loginForm":"Bienvenido a Luch",
     "login":"Autorizar",
     "userName":"Login",
     "pass":"Contraseña",
@@ -490,7 +490,7 @@
     "wheelToZoomX": "Вращение колесика мыши - масштабирование по оси времени",
     "shiftAndWheelToZoomY": "Вращение колесика мыши с зажатым SHIFT - масштабирование по оси значений",
     "time": "Tiempo",
-    "loginForm":"Formulario de autorización",
+    "loginForm":"Bienvenido a Luch",
     "login":"Autorizar",
     "userName":"Login",
     "pass":"Contraseña",
@@ -503,7 +503,7 @@
     "voyage":"Vuelo",
     "flightDate": "Fecha del vuelo",
     "time": "Tiempo",
-    "loginForm":"Formulario de autorización",
+    "loginForm":"Bienvenido a Luch",
     "login":"Autorizar",
     "userName":"Login",
     "pass":"Contraseña",
@@ -517,7 +517,7 @@
     "voyage":"Vuelo",
     "flightDate": "Fecha del vuelo",
     "time": "Tiempo",
-    "loginForm":"Formulario de autorización",
+    "loginForm":"Bienvenido a Luch",
     "login":"Autorizar",
     "userName":"Login",
     "pass":"Contraseña",
@@ -531,7 +531,7 @@
     "voyage":"Vuelo",
     "flightDate": "Fecha del vuelo",
     "time": "Tiempo",
-    "loginForm":"Formulario de autorización",
+    "loginForm":"Bienvenido a Luch",
     "login":"Autorizar",
     "userName":"Login",
     "pass":"Contraseña",
@@ -545,7 +545,7 @@
     "voyage":"Vuelo",
     "flightDate": "Fecha del vuelo",
     "time": "Tiempo",
-    "loginForm":"Formulario de autorización",
+    "loginForm":"Bienvenido a Luch",
     "login":"Autorizar",
     "userName":"Login",
     "pass":"Contraseña",
@@ -560,7 +560,7 @@
     "flightDate": "Fecha del vuelo",
     "tpl": "Plantillas",
     "time": "Tiempo",
-    "loginForm":"Formulario de autorización",
+    "loginForm":"Bienvenido a Luch",
     "login":"Autorizar",
     "userName":"Login",
     "pass":"Contraseña",
@@ -604,7 +604,7 @@
     "delChart": "Borrar Calendario",
     "message": "Mensaje",
     "continueLabel": "Proceder",
-    "loginForm":"Formulario de autorización",
+    "loginForm":"Bienvenido a Luch",
     "login":"Autorizar",
     "userName":"Login",
     "pass":"Contraseña",
@@ -660,7 +660,7 @@
 },
 
 "userPage":{
-    "loginForm":"Formulario de autorización",
+    "loginForm":"Bienvenido a Luch",
     "rememberMe":"Recordar",
     "login":"Autorizar",
     "userCreation" : "Creación de un nuevo usuario",
