--- a/lang/RU.lang
+++ b/lang/RU.lang
@@ -229,7 +229,7 @@
     "create": "Создать",
 
     "message": "Сообщение",
-    "loginForm":"Форма авторизации",
+    "loginForm":"Добро пожаловать",
     "login":"Авторизироваться",
     "userName":"Логин",
     "pass":"Пароль",
@@ -354,7 +354,7 @@
     "reliability": "Достов.",
     "comment": "Комментарий",
     "continue": "Далее",
-    "loginForm":"Форма авторизации",
+    "loginForm":"Добро пожаловать",
     "login":"Авторизироваться",
     "userName":"Логин",
     "pass":"Пароль",
@@ -401,7 +401,7 @@
     "aditionalInfo" : "Доп. информация",
     "reliability": "Достов.",
     "comment": "Комментарий",
-    "loginForm":"Форма авторизации",
+    "loginForm":"Добро пожаловать",
     "login":"Авторизироваться",
     "userName":"Логин",
     "pass":"Пароль",
@@ -447,7 +447,7 @@
     "toChart": "на график",
     "toDiagnostic": "на диагностику",
     "continueLabel": "Продолжить",
-    "loginForm":"Форма авторизации",
+    "loginForm":"Добро пожаловать",
     "login":"Авторизироваться",
     "userName":"Логин",
     "pass":"Пароль",
@@ -461,7 +461,7 @@
     "bort" : "Борт",
     "voyage" : "Рейсы",
     "engines" : "Номера двигателей",
-    "loginForm":"Форма авторизации",
+    "loginForm":"Добро пожаловать",
     "login":"Авторизироваться",
     "userName":"Логин",
     "pass":"Пароль",
@@ -490,7 +490,7 @@
     "wheelToZoomX": "Вращение колесика мыши - масштабирование по оси времени",
     "shiftAndWheelToZoomY": "Вращение колесика мыши с зажатым SHIFT - масштабирование по оси значений",
     "time": "Время",
-    "loginForm":"Форма авторизации",
+    "loginForm":"Добро пожаловать",
     "login":"Авторизироваться",
     "userName":"Логин",
     "pass":"Пароль",
@@ -503,7 +503,7 @@
     "voyage":"Рейс",
     "flightDate": "Дата полета",
     "time": "Время",
-    "loginForm":"Форма авторизации",
+    "loginForm":"Добро пожаловать",
     "login":"Авторизироваться",
     "userName":"Логин",
     "pass":"Пароль",
@@ -517,7 +517,7 @@
     "voyage":"Рейс",
     "flightDate": "Дата полета",
     "time": "Время",
-    "loginForm":"Форма авторизации",
+    "loginForm":"Добро пожаловать",
     "login":"Авторизироваться",
     "userName":"Логин",
     "pass":"Пароль",
@@ -531,7 +531,7 @@
     "voyage":"Рейс",
     "flightDate": "Дата полета",
     "time": "Время",
-    "loginForm":"Форма авторизации",
+    "loginForm":"Добро пожаловать",
     "login":"Авторизироваться",
     "userName":"Логин",
     "pass":"Пароль",
@@ -545,7 +545,7 @@
     "voyage":"Рейс",
     "flightDate": "Дата полета",
     "time": "Время",
-    "loginForm":"Форма авторизации",
+    "loginForm":"Добро пожаловать",
     "login":"Авторизироваться",
     "userName":"Логин",
     "pass":"Пароль",
@@ -560,7 +560,7 @@
     "flightDate": "Дата полета",
     "tpl": "Шаблоны",
     "time": "Время",
-    "loginForm":"Форма авторизации",
+    "loginForm":"Добро пожаловать",
     "login":"Авторизироваться",
     "userName":"Логин",
     "pass":"Пароль",
@@ -604,7 +604,7 @@
     "delChart": "Удалить график",
     "message": "Сообщение",
     "continueLabel": "Продолжить",
-    "loginForm":"Форма авторизации",
+    "loginForm":"Добро пожаловать",
     "login":"Авторизироваться",
     "userName":"Логин",
     "pass":"Пароль",
@@ -660,7 +660,7 @@
 },
 
 "userPage":{
-    "loginForm":"Форма авторизации",
+    "loginForm":"Добро пожаловать",
     "rememberMe":"Запомнить",
     "login":"Авторизироваться",
     "userCreation" : "Создание нового пользователя",
