Search box mobile width fix

--- a/lang/EN.lang
+++ b/lang/EN.lang
@@ -365,7 +365,8 @@
     "eventCodeMask003": "Information messages",
     "rememberMe":"Remember",
     "loginFailed": "Login Failed",
-    "notAllowedByPrivilege" : "No privilege"
+    "notAllowedByPrivilege" : "No privilege",
+    "search": "Search"
 },
 
 "printerPage":{
