events flight menu item

--- a/lang/Default.lang
+++ b/lang/Default.lang
@@ -43,54 +43,54 @@
     "flightList": "Flights list",
 
     "flightFilesList": "Flight files for convertion",
-	"flightsConvertSelected": "Convert selected",
+    "flightsConvertSelected": "Convert selected",
 
     "flightUploadComplt": "Complete",
     "flightImportSuccess": "Flight import success. Refresh page",
     "flightImportFailed": "Flight import failed",
 
-	"serverCommunicationError": 'serverCommunicationError',
-	"loadingMessage": 'loadingMessage',
-	"noDataAvailable": 'noDataAvailable',
-	"addNewRecord": 'addNewRecord',
-	"editRecord": 'editRecord',
-	"areYouSure": 'areYouSure',
-	"deleteConfirmation": 'deleteConfirmation',
-	"save": 'save',
-	"saving": 'saving',
-	"cancel": 'cancel',
-	"deleteText": 'deleteText',
-	"deleting": 'deleting',
-	"error": 'error',
-	"close": 'close',
-	"cannotLoadOptionsFor": 'cannotLoadOptionsFor {0}',
-	"pagingInfo": 'Rows from {0} to {1} at {2}',
-	"canNotDeletedRecords": 'canNotDeletedRecords: {0} from {1}!',
-	"deleteProggress": 'Deleting {0} from {1} rows...',
-	"pageSizeChangeLabel": 'pageSizeChangeLabel',
-	"gotoPageLabel": 'gotoPageLabel',
+    "serverCommunicationError": 'serverCommunicationError',
+    "loadingMessage": 'loadingMessage',
+    "noDataAvailable": 'noDataAvailable',
+    "addNewRecord": 'addNewRecord',
+    "editRecord": 'editRecord',
+    "areYouSure": 'areYouSure',
+    "deleteConfirmation": 'deleteConfirmation',
+    "save": 'save',
+    "saving": 'saving',
+    "cancel": 'cancel',
+    "deleteText": 'deleteText',
+    "deleting": 'deleting',
+    "error": 'error',
+    "close": 'close',
+    "cannotLoadOptionsFor": 'cannotLoadOptionsFor {0}',
+    "pagingInfo": 'Rows from {0} to {1} at {2}',
+    "canNotDeletedRecords": 'canNotDeletedRecords: {0} from {1}!',
+    "deleteProggress": 'Deleting {0} from {1} rows...',
+    "pageSizeChangeLabel": 'pageSizeChangeLabel',
+    "gotoPageLabel": 'gotoPageLabel',
 
-	"apTable": "apTable",
-	"gradiTable": "gradiTable",
-	"srcTable": "srcTable",
-	"editGradiTable": "editGradiTable",
-	"editSrc": "editSrc",
-	"gradiCode": "Code",
-	"gradiPh": "Phisics",
-	"srcVal": "Script",
+    "apTable": "apTable",
+    "gradiTable": "gradiTable",
+    "srcTable": "srcTable",
+    "editGradiTable": "editGradiTable",
+    "editSrc": "editSrc",
+    "gradiCode": "Code",
+    "gradiPh": "Phisics",
+    "srcVal": "Script",
 
-	"paramCode": "paramCode",
-	"paramName": "paramName",
-	"dim": "dim",
-	"paramType": "paramType",
-	"channels": "channels",
-	"koef": "koef",
-	"minus": "minus",
-	"mask": "mask",
-	"shift": "shift",
-	"minVal": "minVal",
-	"maxVal": "maxVal",
-	"prefix": "prefix",
+    "paramCode": "paramCode",
+    "paramName": "paramName",
+    "dim": "dim",
+    "paramType": "paramType",
+    "channels": "channels",
+    "koef": "koef",
+    "minus": "minus",
+    "mask": "mask",
+    "shift": "shift",
+    "minVal": "minVal",
+    "maxVal": "maxVal",
+    "prefix": "prefix",
 
     "indexPage": {
         "title": "Welcome",
@@ -102,12 +102,14 @@
         "filePreview": "Preview",
         "chooseFile": "Choose file",
 
-		"flightsItem": "Flight",
-		"slicesItem": "Slices",
-		"enginesItem": "Engines",
-		"bruTypesItem": "FDRs",
-		"docsItem": "Documents",
-		"usersItem": "Users",
+        "flightsItem": "Flight",
+        "slicesItem": "Slices",
+        "enginesItem": "Engines",
+        "bruTypesItem": "FDRs",
+        "docsItem": "Documents",
+        "usersItem": "Users",
+        "resultsItem": "Results",
+        "eventsItem": "Events",
 
         "sliceCreation": "Making the cut",
         "sliceName": "Name",
@@ -118,19 +120,19 @@
         "sliceParamsTableName": "Options",
         "sliceStatusAsEtalon": "Status",
         "sliceSetAsEtalon": "Etalon",
-		"bruTypesList": "FDR types list",
-		"bruTypesName": "FDR type",
-		"bruTypesStepLenth": "Frame duration (sec)",
-		"bruTypesFrameLength": "Frame length (bytes)",
-		"bruTypesWordLength": "Word length (bytes)",
-		"bruTypesAditionalInfo": "Aditional info",
-		"bruTypesNoAditionalInfo": "No",
+        "bruTypesList": "FDR types list",
+        "bruTypesName": "FDR type",
+        "bruTypesStepLenth": "Frame duration (sec)",
+        "bruTypesFrameLength": "Frame length (bytes)",
+        "bruTypesWordLength": "Word length (bytes)",
+        "bruTypesAditionalInfo": "Aditional info",
+        "bruTypesNoAditionalInfo": "No",
         "usersList": "Users list",
         "usersLogin": "Login",
         "usersCompany": "Organization",
-		"usersPrivilege": "Privilege",
-		"usersSubscribers": "Subscribers",
-		"userNoSubscribers": "No",
+        "usersPrivilege": "Privilege",
+        "usersSubscribers": "Subscribers",
+        "userNoSubscribers": "No",
         "etalonName": "Name of reference",
         "sliceNotSetAsEtalon": "No",
         "engineList": "List of residuals engines",
@@ -151,19 +153,19 @@
         "loginFailed": "Login failed",
         "centring": "Centring",
         "engines":"Engine serials",
-		"firstOfficer": "First officer",
-		"flightView": "View",
-	    "flightFollow": "Follow",
-	    "flightUpload": "Upload",
-	    "flightDelete": "Delete",
-	    "flightExport": "Export",
-	    "flightImport": "Import",
-	    "userExit": "Exit",
-		"notAllowedByPrivilege" : "Not enough privilege level to perform current action"
+        "firstOfficer": "First officer",
+        "flightView": "View",
+        "flightFollow": "Follow",
+        "flightUpload": "Upload",
+        "flightDelete": "Delete",
+        "flightExport": "Export",
+        "flightImport": "Import",
+        "userExit": "Exit",
+        "notAllowedByPrivilege" : "Not enough privilege level to perform current action"
     },
 
     "flightsPage":{
-		"root" : "Root folder",
+        "root" : "Root folder",
         "bort": "Bort",
         "voyage": "Flight",
         "uploadTime": "Time and uploads",
@@ -173,7 +175,7 @@
         "status": "processing status",
         "performed": "accomplished",
         "notPerformed": "not performed"
-	},
+    },
 
     "tunerPage": {
         "pasport": "Passport",
@@ -182,11 +184,11 @@
         "flightDate": "The time and date of the flight",
         "bruType": "FDR type",
         "centringto": "Takeoff centring",
-		"centringlndg": "Landing centring",
-		"weightto": "Takeoff weight",
-		"weightlndg": "Landing weight",
-		"capitan": "Capitan",
-		"route":"Route",
+        "centringlndg": "Landing centring",
+        "weightto": "Takeoff weight",
+        "weightlndg": "Landing weight",
+        "capitan": "Capitan",
+        "route":"Route",
         "centring": "Alignment",
         "departureAirport": "Airport Departure",
         "arrivalAirport": "Airport Landing",
@@ -195,7 +197,7 @@
         "performer": "Artist",
         "save": "Save",
         "saveColor": "saveColor",
-		"saveBlack": "saveBlack",
+        "saveBlack": "saveBlack",
         "message": "Message",
         "eventsList": "List of events",
         "start": "Start",
@@ -242,11 +244,11 @@
         "flightDate": "The time and date of the flight",
         "bruType": "The log provider type",
         "centringto": "Takeoff centring",
-		"centringlndg": "Landing centring",
-		"weightto": "Takeoff weight",
-		"weightlndg": "Landing weight",
-		"capitan": "Capitan",
-		"route":"Route",
+        "centringlndg": "Landing centring",
+        "weightto": "Takeoff weight",
+        "weightlndg": "Landing weight",
+        "capitan": "Capitan",
+        "route":"Route",
         "duration" : "Duration",
         "centring": "Alignment",
         "firstOfficer": "First officer",
@@ -281,10 +283,10 @@
         "enterFlightDetails": "Enter the flight recording",
         "bruType": "FDR type",
         "centringto": "TakeOff centring",
-		"centringlndg": "Landing centring",
-		"weightto": "Takeoff weight",
-		"weightlndg": "Landing weight",
-		"capitan": "Capitan",
+        "centringlndg": "Landing centring",
+        "weightto": "Takeoff weight",
+        "weightlndg": "Landing weight",
+        "capitan": "Capitan",
         "centring": "Centring",
         "departureAirport": "Airport Departure",
         "arrivalAirport": "Airport Landing",
@@ -348,7 +350,7 @@
         "L_labels": "L (labels) - series labels on chart left side",
         "I_info": "I (info) - to be prompted",
         "G_googleEarth": "G (Google Earth) - Google Earth",
-		"S_simulator": "S (simulator) - 3d model",
+        "S_simulator": "S (simulator) - 3d model",
         "wheelToZoomX": "Rotating the mouse wheel - zooming along the time axis",
         "shiftAndWheelToZoomY": "Rotating the mouse wheel while holding the SHIFT - scaling axis values",
         "time": "Time",
@@ -473,76 +475,76 @@
         "notAllowedByPrivilege" : "Not enough privilege level to perform current action"
     },
 
-	"bruTypePage":{
-		"loginForm":"Welcome To Luch",
-		"userName":"Login",
-		"pass":"Password",
-		"rememberMe":"Remember me",
-		"login":"Login",
-		"bruTypeCreation" : "New FDR type creation",
-		"bruTypeCreationForm":"FDR type creation form",
-		"bruTypeName":"FDR name",
-		"stepLength":"Frame length (sec)",
-		"stepDivider":"Max param frequency (Hz)",
-		"frameLength":"Frame length (bytes)",
-		"wordLength":"Word size (bytes)",
-		"aditionalInfo":"Aditional info",
-		"headerLength":"Header length (bytes)",
-		"frameSyncroCode":"Syncro word (hex)",
-		"previewParams":"Preview params",
-		"collada":"Model",
-		"headerScr":"Header processing source code",
-		"bruTypeCreate":"Create",
-		"message": "Message",
-	    "notAllowedByPrivilege" : "Not enough privilege level to perform current action"
-	},
+    "bruTypePage":{
+        "loginForm":"Welcome To Luch",
+        "userName":"Login",
+        "pass":"Password",
+        "rememberMe":"Remember me",
+        "login":"Login",
+        "bruTypeCreation" : "New FDR type creation",
+        "bruTypeCreationForm":"FDR type creation form",
+        "bruTypeName":"FDR name",
+        "stepLength":"Frame length (sec)",
+        "stepDivider":"Max param frequency (Hz)",
+        "frameLength":"Frame length (bytes)",
+        "wordLength":"Word size (bytes)",
+        "aditionalInfo":"Aditional info",
+        "headerLength":"Header length (bytes)",
+        "frameSyncroCode":"Syncro word (hex)",
+        "previewParams":"Preview params",
+        "collada":"Model",
+        "headerScr":"Header processing source code",
+        "bruTypeCreate":"Create",
+        "message": "Message",
+        "notAllowedByPrivilege" : "Not enough privilege level to perform current action"
+    },
 
-	"userPage":{
-		"loginForm":"Welcome To Luch",
-		"rememberMe":"Remember me",
-		"login":"Login",
-		"company":"Organization",
-		"userCreation" : "New user creation",
-		"userCreationForm":"User creation form",
-		"userName":"Login",
-	    "pass":"Password",
-	    "repeatPass":"Repeat password",
-	    "userCreationFailed": "User creation failed",
-	    "notAllFieldsMatched": "Not all fields matched",
-	    "userCreate":"Create",
-	    "userPrivilege":"Privilege",
-	    "userMySubscriber":"My subscriber",
-	    "message": "Message",
-	    "userCreatedSuccesfully": "User created",
-	    "openAccessForFlights" : "Open access to flights",
-	    "bortNum": "Bort",
-		"voyage":"Flight",
-		"flightDate": "Flight begin time",
-	    "departureAirport": "Arriving airport",
-		"arrivalAirport": "Departure airport",
-		"bruTypeName": "FDR type",
-		"author": "Author",
-		"access": "Accessible",
-		"openAccessForSlices" : "Open access to slices",
-		"sliceCode" : "Slice code",
-		"sliceName" : "Slice name",
-		"sliceCreationTime" : "Slice creation date",
-		"sliceLastModifyTime" : "Slice last update",
-		"sliceAuthor" : "Author",
-		"sliceIsEtalon" : "Etalon",
-		"openAccessForEngines": "Open access to engines",
-		"engineSerial": "Engine serials",
-		"openAccessForBruTypes": "Open access to FDR types",
-		"bruTypesName": "FDR type",
-		"bruTypesStepLenth": "Frame duration (sec)",
-		"bruTypesFrameLength": "Frame length (bytes)",
-		"bruTypesWordLength": "Word length (bytes)",
-		"bruTypesAuthor": "Author",
-		"openAccessForUsers": "Open access to users",
-		"userLogin": "Login",
-		"userCompany": "Organization",
-		"userAuthor": "Author",
-    	"noDataToOpenAccess" : "No suituble data",
-	    "notAllowedByPrivilege" : "Not enough privilege level to perform current action"
-	}
+    "userPage":{
+        "loginForm":"Welcome To Luch",
+        "rememberMe":"Remember me",
+        "login":"Login",
+        "company":"Organization",
+        "userCreation" : "New user creation",
+        "userCreationForm":"User creation form",
+        "userName":"Login",
+        "pass":"Password",
+        "repeatPass":"Repeat password",
+        "userCreationFailed": "User creation failed",
+        "notAllFieldsMatched": "Not all fields matched",
+        "userCreate":"Create",
+        "userPrivilege":"Privilege",
+        "userMySubscriber":"My subscriber",
+        "message": "Message",
+        "userCreatedSuccesfully": "User created",
+        "openAccessForFlights" : "Open access to flights",
+        "bortNum": "Bort",
+        "voyage":"Flight",
+        "flightDate": "Flight begin time",
+        "departureAirport": "Arriving airport",
+        "arrivalAirport": "Departure airport",
+        "bruTypeName": "FDR type",
+        "author": "Author",
+        "access": "Accessible",
+        "openAccessForSlices" : "Open access to slices",
+        "sliceCode" : "Slice code",
+        "sliceName" : "Slice name",
+        "sliceCreationTime" : "Slice creation date",
+        "sliceLastModifyTime" : "Slice last update",
+        "sliceAuthor" : "Author",
+        "sliceIsEtalon" : "Etalon",
+        "openAccessForEngines": "Open access to engines",
+        "engineSerial": "Engine serials",
+        "openAccessForBruTypes": "Open access to FDR types",
+        "bruTypesName": "FDR type",
+        "bruTypesStepLenth": "Frame duration (sec)",
+        "bruTypesFrameLength": "Frame length (bytes)",
+        "bruTypesWordLength": "Word length (bytes)",
+        "bruTypesAuthor": "Author",
+        "openAccessForUsers": "Open access to users",
+        "userLogin": "Login",
+        "userCompany": "Organization",
+        "userAuthor": "Author",
+        "noDataToOpenAccess" : "No suituble data",
+        "notAllowedByPrivilege" : "Not enough privilege level to perform current action"
+    }
 }
