--- a/lang/EN.lang
+++ b/lang/EN.lang
@@ -258,6 +258,7 @@
     "bruTypesItem": "FDR",
     "usersItem": "Users",
     "resultsItem": "Results",
+    "eventsItem": "Events",
     "searchItem": "Search",
 
     "viewItem" : "View",
