--- a/lang/ES.lang
+++ b/lang/ES.lang
@@ -258,6 +258,7 @@
     "bruTypesItem": "Registradores",
     "usersItem": "Usuarios",
     "resultsItem": "Results",
+    "eventsItem": "Events",
     "searchItem": "Búsqueda",
 
     "viewItem" : "Visión",
