--- a/lang/RU.lang
+++ b/lang/RU.lang
@@ -258,6 +258,7 @@
     "bruTypesItem": "Регистраторы",
     "usersItem": "Пользователи",
     "resultsItem": "Результаты",
+    "eventsItem": "События",
     "searchItem": "Поиск",
 
     "viewItem" : "Обзор",
