Flight comment implemented
CREATE TABLE `flight_comments` (
  `id` int(11) NOT NULL AUTO_INCREMENT,
  `comment` text NOT NULL,
  `commander-admitted` tinyint(1) NOT NULL,
  `aircraft-allowed` tinyint(1) NOT NULL,
  `general-admission` tinyint(1) NOT NULL,
  `id_flight` int(11) NOT NULL,
  `id_user` int(11) NOT NULL,
  `dt` timestamp NOT NULL DEFAULT CURRENT_TIMESTAMP,
  PRIMARY KEY (`id`),
  KEY `id_flight` (`id_flight`),
  KEY `id_user` (`id_user`)
) ENGINE=InnoDB DEFAULT CHARSET=utf8

--- a/lang/EN.lang
+++ b/lang/EN.lang
@@ -370,7 +370,14 @@
     "rememberMe":"Remember",
     "loginFailed": "Login Failed",
     "notAllowedByPrivilege" : "No privilege",
-    "search": "Search"
+    "search": "Search",
+    "flightComment": "Comment",
+    "allowance": "Allowance",
+    "commanderAdmitted": "aerobatic",
+    "aircraftAllowed": "technical",
+    "generalAdmission": "general",
+    "analyzed": "Analyzed",
+    "emptyFlightComment": "Absent"
 },
 
 "printerPage":{
