reload after analyze click

--- a/lang/EN.lang
+++ b/lang/EN.lang
@@ -377,6 +377,7 @@
     "aircraftAllowed": "technical",
     "generalAdmission": "general",
     "analyzed": "Analyzed",
+    "toAnalyze": "To analyze",
     "emptyFlightComment": "Absent"
 },
 
